--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,7 +6,7 @@ compatibility_date = "2024-01-01"
 [[d1_databases]]
 binding = "DB"
 database_name = "bemusterungstool"
-database_id = "" # Wird nach Erstellung eingetragen
+database_id = "696ecc2e-d9a5-4be6-9f3f-646c8928243f" # Wird nach Erstellung eingetragen
 
 # Assets (Frontend)
 [site]
