--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,26 @@
 # Dependencies
 node_modules/
-package-lock.json
-yarn.lock
 
-# Wrangler
+# Build output
+dist/
 .wrangler/
-wrangler.toml.backup
-.dev.vars
 
-# Backups
-backups/
-*.backup
+# IDE
+.vscode/
+.idea/
 
 # OS
 .DS_Store
 Thumbs.db
 
-# Editor
-.vscode/
-.idea/
-*.swp
-*.swo
-
 # Logs
 *.log
 npm-debug.log*
+
+# Environment
+.env
+.env.local
+.env.*.local
+
+# Local D1
+.mf/
