--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,17 +1,15 @@
-name = "gs-bemusterungstool"
-main = "worker.js"
-compatibility_date = "2025-01-01"
+name = "bemusterung-app"
+compatibility_date = "2024-01-01"
+pages_build_output_dir = "./dist"
 
-# D1 Database Binding
 [[d1_databases]]
 binding = "DB"
-database_name = "bemusterungstool"
-database_id = "696ecc2e-d9a5-4be6-9f3f-646c8928243f" # Wird nach Erstellung eingetragen
+database_name = "bemusterung-db"
+database_id = "YOUR_DATABASE_ID_HERE"
 
+# Für lokale Entwicklung:
+# wrangler d1 create bemusterung-db
+# Dann die database_id oben ersetzen
 
-[assets]
-directory = "public"
-
-# Umgebungsvariablen (optional)
 [vars]
 ENVIRONMENT = "production"
