--- a/package.json
+++ b/package.json
@@ -1,38 +1,22 @@
 {
   "name": "bemusterung-app",
   "version": "1.0.0",
-  "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "wrangler d1 migrations apply bemusterung-db --local",
-    "db:migrate:prod": "wrangler d1 migrations apply bemusterung-db --remote",
-    "pages:dev": "wrangler pages dev ./dist --d1=bemusterung-db",
-    "pages:deploy": "npm run build && wrangler pages deploy ./dist"
+    "deploy": "wrangler pages deploy dist"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
-    "jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.8.1",
-    "lucide-react": "^0.294.0",
-    "clsx": "^2.0.0"
+    "lucide-react": "^0.294.0"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20231121.0",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
-    "autoprefixer": "^10.4.16",
-    "drizzle-kit": "^0.20.6",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
-    "typescript": "^5.2.2",
     "vite": "^5.0.0",
-    "wrangler": "^3.17.1"
+    "wrangler": "^3.0.0"
   }
 }
